--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header{
     margin: 15px;
     padding-bottom: 10px;
     color:#f5f5ef;
+    font-size: 20px;
 }
 .banner{
     position: relative;
@@ -31,7 +32,7 @@ header{
 
 .banner p{
     position: absolute;
-    top: 0;
+    top: 0; 
     left: 0;
     top: 50%;
     left: 15%;
@@ -42,6 +43,7 @@ header{
 h2{
     margin: 100px;
     text-align: center;
+    font-size: 40px;
 }
 
 #aboutme img{
@@ -66,4 +68,37 @@ h2{
     padding: 10px;
     background-color: #b3cccc;
     color: #f5f5ef;
+}
+
+#skills{
+    background-color: #b3cccc;
+    margin-top: 150px;
+    display: block;
+}
+
+#skills h2{
+    margin-top: 100px;
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 40px;
+    padding-top: 30px;
+    color: #f5f5ef
+}
+
+#skills img{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    width: 10%;
+    height:10%;
+    object-fit: cover;
+    opacity: 0.5;
+    margin: auto;
+    padding: 20px;
+
+}
+
+#projects p{
+    text-align: center;
+    font-size: 20px;
 }
