--- a/style.css
+++ b/style.css
@@ -117,13 +117,14 @@ h2{
     color: #f5f5ef
 }
 
-#certificates img{
-    display: inline-block; 
+#certificates-img img{
     width: 20%;
-    height:20%;
-    object-fit: cover;
-    margin: 20px;
-    padding: 20px;
+    padding-bottom: 100px;
+    padding-left:30px
+}
+#certificates-img{
+    display: flex;
+    justify-content: center;
 }
 
 .contactme{
